--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,14 +1,7 @@
-@font-face {
-    font-family: 'Star Jedi Regular';
-    font-style: normal;
-    font-weight: normal;
-    src: local('Star Jedi Regular'), url('Starjedi.woff') format('woff');
-}
-
 h1 {
-    font-family: "Star Jedi Regular";
+    font-size:3em;
     color: yellow;
-    line-height: 0.1em;
+    
     display: inline-block;
 }
 
