--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,13 @@
+@font-face {
+    font-family: 'Star Jedi Regular';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Star Jedi Regular'), url('Starjedi.woff') format('woff');
+}
+
 body {
     margin: 20px;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    font-family: "Star Jedi Regular";
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background: linear-gradient(to left, rgba(120, 120, 120, 1) 0%, rgba(0, 0, 0, 1) 100%);
