--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,13 +1,7 @@
-h1 {
-    font-size:3em;
-    color: yellow;
-    
-    display: inline-block;
-}
 
-header {
-    display:flex;
-    height: 30vh;
-    align-items:center;
-    justify-content: center;
+
+
+
+.infoCard {
+    background-color: rgba(144, 238, 144, 0.1)
 }
