--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,9 +10,13 @@ body {
     font-family: "Star Jedi Regular";
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background: linear-gradient(to left, rgba(120, 120, 120, 1) 0%, rgba(0, 0, 0, 1) 100%);
+    background: linear-gradient(rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)),
+    url("https://wallpaperaccess.com/full/11814.jpg") no-repeat center center fixed;
+    background-size: cover;
     color: #333;
+
 }
+
 
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
