--- a/src/styles/InfoCard.css
+++ b/src/styles/InfoCard.css
@@ -1,5 +1,8 @@
 .infoCard {
-    background-color: rgba(144, 238, 144, 0.1);
+    background-color: rgba(64, 128, 128, 0.4);
     color: turquoise;
+    width:100%;
+    margin:2rem;
+    border-radius:1rem;
 
 }
