--- a/src/styles/InfoCard.css
+++ b/src/styles/InfoCard.css
@@ -1,8 +1,11 @@
 .infoCard {
-    background-color: rgba(64, 128, 128, 0.4);
+    background-color: rgba(64, 200, 200, 0.4);
     color: turquoise;
-    width:100%;
-    margin:2rem;
-    border-radius:1rem;
-
+    width: 100%;
+    margin: 1rem;
+    padding: 1rem;
+    border-radius: 1rem;
+    box-sizing: border-box;
+    text-align: center;
+    display:block
 }
