--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,7 +7,7 @@
 
 body {
     margin: 20px;
-    font-family: "Star Jedi Regular";
+    font-family: "star jedi regular";
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background: linear-gradient(rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), url("https://wallpaperaccess.com/full/11814.jpg") no-repeat center center fixed;
