--- a/src/styles/InfoCard.css
+++ b/src/styles/InfoCard.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'orbitron';
+    src: url('Orbitron-Regular.ttf') format('truetype')
+}
+
 .infoCard {
     background-color: rgba(64, 200, 200, 0.4);
     color: turquoise;
@@ -8,5 +13,6 @@
     border-radius: 1rem;
     box-sizing: border-box;
     text-align: center;
-    display: block
+    display: block;
+    font-family: 'orbitron', sans-serif;
 }
