--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -18,11 +18,8 @@ header {
     #pageLogo{
         display:block;
         width:100%;
-        margin: 0 auto;
+        margin: 1rem auto;
         text-align: center;
-    }
-    header {
-        flex-direction: column;
     }
 }
 
