updated filters for itemInfo InfoCard and styles for readibility

--- a/src/styles/InfoCard.css
+++ b/src/styles/InfoCard.css
@@ -17,3 +17,8 @@
     font-family: 'orbitron', sans-serif;
     overflow-wrap: break-word;
 }
+
+.infoKey {
+    font-weight: bold;
+    text-transform: capitalize;
+}
