added loading text while fetching, added fetch all pages from api category, added sticky info card style

--- a/src/styles/InfoCard.css
+++ b/src/styles/InfoCard.css
@@ -16,6 +16,8 @@
     display: block;
     font-family: 'orbitron', sans-serif;
     overflow-wrap: break-word;
+    position: sticky;
+    top:1rem;
 }
 
 .infoKey {
