--- a/src/styles/ItemList.css
+++ b/src/styles/ItemList.css
@@ -4,9 +4,14 @@
     width: 100%;
     margin: 1rem;
     padding: 0;
+    border: 1px solid turquoise;
     border-radius: 1rem;
     box-sizing: border-box;
     display: block
+}
+
+.loading {
+    padding: 1rem;
 }
 
 ul {
@@ -14,8 +19,7 @@ ul {
     text-align: left;
     padding: 0;
     margin: 0;
-    border: 1px solid turquoise;
-    border-radius: 1rem;
+    
 }
 
 ul li {
