--- a/src/styles/NavLinks.css
+++ b/src/styles/NavLinks.css
@@ -1,4 +1,6 @@
 nav {
-    /* align-self: flex-end; */
-    margin: 1rem 0 0.5rem 0;
+    display:flex;
+    flex-wrap:wrap;
+    justify-content: center;
+    margin: 0.5rem 0;
 }
