--- a/src/styles/NavLinks.css
+++ b/src/styles/NavLinks.css
@@ -1,6 +1,4 @@
 nav {
-    display:flex;
-    flex-wrap:wrap;
-    justify-content: center;
-    margin: 0.5rem 0;
+    /* align-self: flex-end; */
+    margin: 1rem 0 0.5rem 0;
 }
