--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,15 +1,30 @@
 header {
     display: flex;
     flex-direction: column;
-    height: 30vh;
+    height: 40vh;
     align-items: center;
     justify-content: center;
-    padding: 1rem;
+    padding:1rem;
 }
 
 #pageLogo {
-    font-size: 3em;
+    font-size:3em;
     display: inline-block;
     color: yellow;
-    padding: 1rem;
+    padding:1rem;
 }
+
+@media screen and (max-width: 700px){
+    #pageLogo{
+        display:block;
+        width:100%;
+        margin: 0 auto;
+        text-align: center;
+    }
+    header {
+        flex-direction: column;
+    }
+}
+
+
+
